--- a/misopedia.html
+++ b/misopedia.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <main>Misopedia<br>Katten<i>Miso</i></main>
+
+    <footer>
+        <a href="">Hem</a><a href="">Skötsel</a><a href="">Video</a><a href="">Galleri</a>
+    </footer>
     
 </body>
 </html>
