--- a/misopedia.html
+++ b/misopedia.html
@@ -11,6 +11,12 @@
     <footer>
         <a href="">Hem</a><a href="">Skötsel</a><a href="">Video</a><a href="">Galleri</a>
     </footer>
+
+    <h1 id="heading">Miso<br>Neva Masquerade/Perser</h1>
+
+    <div id="image"></div>
+
+    <h2>Om min katt Miso</h2>
     
 </body>
 </html>
