--- a/misopedia.html
+++ b/misopedia.html
@@ -17,6 +17,10 @@
     <div id="image"></div>
 
     <h2>Om min katt Miso</h2>
+
+    <p>
+        Miso föddes den 24 maj 2022 och flyttade in i hushållet den 21 september 2022. Han är en mycket kelig katt och följer efter gärna matte och husse runt i lägenheten som en svans. Miso är mycket pratsam, så ensam kommer man inte känna sig när Miso närvarar!
+    </p>
     
 </body>
 </html>
