--- a/misopedia.html
+++ b/misopedia.html
@@ -21,6 +21,10 @@
     <p>
         Miso föddes den 24 maj 2022 och flyttade in i hushållet den 21 september 2022. Han är en mycket kelig katt och följer efter gärna matte och husse runt i lägenheten som en svans. Miso är mycket pratsam, så ensam kommer man inte känna sig när Miso närvarar!
     </p>
+
+    <h2>Neva Masquerade</h2>
+
+    <p>Neva Masquerade är en ganska ny kattras som godkändes som egen ras först 2009. Den härstammar från kattrasen Sibirisk katt, vilken den är mycket lik. Det finns en hel del independentföreningar som fortfarande räknar Sibirisk katt och Neva Masquerade som samma ras.<br><br>Neva Masquerad har blå ögon och är till skillnad mot Sibirisk katt maskad, vilket innebär att ansiktet, öronen och benen har en mörkare färg än övriga kroppen som är ljus. Det är en stor och muskulös kattras, men det tar flera år innan den når sin fulla storlek.<br><br>Neva Masquerade är en katt som gillar att vara nära dig och följer gärna efter dig från rum till rum. Den är kelig och gosig, men samtidigt en energirik och intelligent katt som gillar att leka även i vuxen ålder. Prova gärna att lära den några tricks!</p>
     
 </body>
 </html>
