--- a/misopedia.html
+++ b/misopedia.html
@@ -30,6 +30,6 @@
 
     <p>Perser är en mycket gammal kattras som är känd för att inte bara vara söt, utan även mycket snäll och lugn.<br><br>Förutom dess korta svans och lång härliga päls är det framförallt ansiktet som utmärker en Perser, där ansiktet nästan ser lite tilltryckt ut. En perser kräver mycket skötsel i from av borstning då pälsen ofta tovar sig. Det är en bra idé att bada den emellanåt då en ren päls leder till mindre tovar.<br><br>Perser är en mycket lugn och snäll kattras som inte gör så mycket väsen av sig. Så vill du ha en katt med lite lägre energinivå som inte hittar på en massa hyss och gärna myser med dig i soffan kan detta vara helt rätt för dig.</p>
 
-    
+    <footer id="sista">Misopedia 2022</footer>
 </body>
 </html>
